<resources>
    <string name="app_name">TourGuideApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="york_guide">York guide</string>
    <string name="home">Home</string>
    <string name="popular_places">Popular Places</string>
    <string name="museums">Museums</string>
    <string name="pubs">Pubs and Restaurants</string>
    <string name="hotels">Hotels</string>
    <string name="place_name">Place name</string>
    <string name="place_detail">Place detail</string>
    <string name="description">Description</string>
    <string name="address">Address</string>
    <string name="web">Web</string>
    <string name="phone">Phone</string>
    <string name="hours">Hours</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="backdrop">backdrop</string>
    <string name="time_interval">10AM&#8211;6PM</string>
    <string name="york_minster_name">York Minster</string>
    <string name="york_minster_description">The Cathedral and Metropolitical Church of Saint Peter in York, commonly known as York Minster, is the cathedral of York, England, and is one of the largest of its kind in Northern Europe.</string>
    <string name="york_minster_address">Deangate, York YO1 7HH, UK</string>
    <string name="york_minster_hours">8AM&#8211;6PM</string>
    <string name="york_minster_phone">+44 1904 557200</string>
    <string name="york_minster_web">https://yorkminster.org/</string>
    <string name="mansion_house_name">Mansion House</string>
    <string name="mansion_house_description">The Mansion House in York, England is the home of the Lord Mayors of York during their term in office. It is situated in St Helen\'s Square, where York\'s Coney Street and Lendal intersect in the city centre. It is built in an early Georgian style.</string>
    <string name="mansion_house_address">St. Helen’s Square, York YO1 9QL, UK</string>
    <string name="mansion_house_hours">10:30AM&#8211;5PM</string>
    <string name="mansion_house_phone">+44 1904 552036</string>
    <string name="mansion_house_web">http://www.mansionhouseyork.com/</string>
    <string name="shambles_market_name">Shambles Market</string>
    <string name="shambles_market_description">Long established outdoor city center market open 7 days a week selling produce, crafts and clothing.</string>
    <string name="shambles_market_address">5 Silver Street, York YO1 8RY, UK</string>
    <string name="shambles_market_hours">9AM&#8211;5PM</string>
    <string name="shambles_market_phone">+44 1904 551355</string>
    <string name="shambles_market_web">http://www.shamblesmarket.com/</string>
    <string name="jorvik_viking_centre_name">Jorvik Viking Centre</string>
    <string name="jorvik_viking_centre_description">The Jorvik Viking Centre is a museum and visitor attraction in York, England, containing lifelike mannequins and life-size dioramas depicting Viking life in the city. It was created by the York Archaeological Trust in 1984.</string>
    <string name="jorvik_viking_centre_address">19 Coppergate, York YO1 9WT, UK</string>
    <string name="jorvik_viking_centre_hours">10AM&#8211;5PM</string>
    <string name="jorvik_viking_centre_phone">+44 1904 615505</string>
    <string name="jorvik_viking_centre_web">https://www.jorvikvikingcentre.co.uk/</string>
    <string name="york_castle_name">York Castle</string>
    <string name="york_castle_description">York Castle in the city of York, England, is a fortified complex comprising, over the last nine centuries, a sequence of castles, prisons, law courts and other buildings on the south side of the River Foss.</string>
    <string name="york_castle_address">Tower St, York YO1 9SA, UK</string>
    <string name="york_castle_hours">10AM&#8211;6PM</string>
    <string name="york_castle_phone">+44 370 333 1181</string>
    <string name="york_castle_web">http://www.english-heritage.org.uk/visit/places/cliffords-tower-york</string>
    <string name="york_castle_museum_name">York Castle Museum</string>
    <string name="york_castle_museum_description">York Castle Museum is a museum located in York, North Yorkshire, England, on the site of York Castle, originally built by William the Conqueror in 1068.</string>
    <string name="york_castle_museum_address">Tower St, York YO1 9RY, UK</string>
    <string name="york_castle_museum_hours">9:30AM&#8211;5PM</string>
    <string name="york_castle_museum_phone">+44 1904 687687</string>
    <string name="york_castle_museum_web">https://www.yorkcastlemuseum.org.uk/</string>
    <string name="york_museum_gardens_name">York Museum Gardens</string>
    <string name="york_museum_gardens_description">The York Museum Gardens are botanic gardens in the centre of York, England, beside the River Ouse. They cover an area of 10 acres of the former grounds of St Mary\'s Abbey, and were created in the 1830s.</string>
    <string name="york_museum_gardens_address">Museum St, York YO1 7FR, UK</string>
    <string name="york_museum_gardens_phone">+44 1904 687687</string>
    <string name="york_museum_gardens_web">https://www.yorkshiremuseum.org.uk/</string>
    <string name="york_dungeon_name">York Dungeon</string>
    <string name="york_dungeon_description">York Dungeon is a tourist attraction in York, England. York Dungeon depicts history of the dungeon using actor led shows, special effects and displays of models and objects.</string>
    <string name="york_dungeon_address">12 Clifford St, York YO1 9RD, UK</string>
    <string name="york_dungeon_hours">10AM&#8211;5PM</string>
    <string name="york_dungeon_phone">+44 871 663 1671</string>
    <string name="york_dungeon_web">https://www.thedungeons.com/york/en/</string>
    <string name="yorkshire_air_museum_name">Yorkshire Air Museum</string>
    <string name="yorkshire_air_museum_description">The Yorkshire Air Museum and Allied Air Forces Memorial is an air museum in England on the site of the former RAF Elvington airfield. The museum was founded, and first opened to the public, in the early 1980s.</string>
    <string name="yorkshire_air_museum_address">Halifax Way, Elvington, York YO41 4AU, UK</string>
    <string name="yorkshire_air_museum_hours">10AM&#8211;5PM</string>
    <string name="yorkshire_air_museum_phone">+44 1904 608595</string>
    <string name="yorkshire_air_museum_web">http://yorkshireairmuseum.org/</string>
    <string name="york_chocolate_story_name">York\'s Chocolate Story</string>
    <string name="york_chocolate_story_description">York\'s Chocolate Story is a visitor attraction and chocolate museum in York.</string>
    <string name="york_chocolate_story_address">3&#8211;4 Kings Square, York YO1 7LD, UK</string>
    <string name="york_chocolate_story_hours">10AM&#8211;5PM</string>
    <string name="york_chocolate_story_phone">+44 1904 527765</string>
    <string name="york_chocolate_story_web">https://www.yorkschocolatestory.com/</string>
    <string name="national_railway_museum_name">National Railway Museum</string>
    <string name="national_railway_museum_description">The National Railway Museum is a museum in York forming part of the British Science Museum Group of National Museums and telling the story of rail transport in Britain and its impact on society.</string>
    <string name="national_railway_museum_address">Leeman Rd, York YO26 4XJ, UK</string>
    <string name="national_railway_museum_hours">10AM&#8211;6PM</string>
    <string name="national_railway_museum_phone">+44 333 016 1010</string>
    <string name="national_railway_museum_web">https://www.railwaymuseum.org.uk/</string>
    <string name="yorkshire_museum_name">Yorkshire Museum</string>
    <string name="yorkshire_museum_description">The Yorkshire Museum is a museum in York, England. It is the home of the Cawood sword, and has four permanent collections, covering biology, geology, archaeology and astronomy.</string>
    <string name="yorkshire_museum_address">Museum Gardens, York YO1 7FR, UK</string>
    <string name="yorkshire_museum_hours">10AM&#8211;5PM</string>
    <string name="yorkshire_museum_phone">+44 1904 687687</string>
    <string name="yorkshire_museum_web">https://www.yorkshiremuseum.org.uk/</string>
    <string name="the_shambles_name">York Shambles</string>
    <string name="the_shambles_description">York\'s most famous street is lined with timber-framed buildings housing a range of touristy shops.</string>
    <string name="the_shambles_address">York YO1 7LZ, UK</string>
    <string name="the_shambles_phone">+44 871 266 3676</string>
    <string name="the_shambles_web">https://www.insideyork.co.uk/index.php?q=what-to-see/shambles/</string>
    <string name="pivni_york_name">Pivní York</string>
    <string name="pivni_york_description">Cosy and candle-lit, 2-storey bar serving artisan beers in 16th-century, half-timbered townhouse.</string>
    <string name="pivni_york_address">6 Patrick Pool, York YO1 8BB, UK</string>
    <string name="pivni_york_hours">11:30AM&#8211;11:30PM</string>
    <string name="pivni_york_phone">+44 1904 635464</string>
    <string name="pivni_york_web">http://pivni.co.uk/</string>
    <string name="golden_fleece_name">The Golden Fleece</string>
    <string name="golden_fleece_description">Airy rooms, some with 4-poster beds, in a casual 16th-century pub offering a beer garden.</string>
    <string name="golden_fleece_address">16 Pavement, York YO1 9UP, UK</string>
    <string name="golden_fleece_hours">10AM&#8211;12PM</string>
    <string name="golden_fleece_phone">+44 1904 620491</string>
    <string name="golden_fleece_web">https://www.goldenfleecepubyork.co.uk/</string>
    <string name="barbakan_restaurant_name">Barbakan Restaurant &amp; Cafe</string>
    <string name="barbakan_restaurant_description">Bright, rustic Polish dining room with wooden tables and striped linen, serving a traditional menu.</string>
    <string name="barbakan_restaurant_address">58 Walmgate, York YO1 9TL, UK</string>
    <string name="barbakan_restaurant_hours">9AM&#8211;10PM</string>
    <string name="barbakan_restaurant_phone">+44 1904 672474</string>
    <string name="barbakan_restaurant_web">http://deli-barbakan.co.uk/</string>
    <string name="rustique_name">Rustique</string>
    <string name="rustique_description">A rustic French menu served in a bright room with wooden tables, mirrors and a stained-glass window.</string>
    <string name="rustique_address">28 Castlegate, York YO1 9RP, UK</string>
    <string name="rustique_hours">12PM&#8211;10PM</string>
    <string name="rustique_phone">+44 1904 612744</string>
    <string name="rustique_web">https://www.rustiquerestaurants.co.uk/</string>
    <string name="grand_hotel_name">The Grand Hotel &amp; Spa, York</string>
    <string name="grand_hotel_description">Chic, luxury rooms in a grand Edwardian railway hotel, plus spa and a grill with York Minster views.</string>
    <string name="grand_hotel_address">Station Rise, York YO1 6GD, UK</string>
    <string name="grand_hotel_phone">+44 1904 380038</string>
    <string name="grand_hotel_web">https://www.thegrandyork.co.uk/</string>
    <string name="grays_court_hotel_name">Grays Court Hotel</string>
    <string name="grays_court_hotel_description">Elegant, antiques-furnished rooms in an 11th-century house with a Jacobean oak-panelled gallery.</string>
    <string name="grays_court_hotel_address">Chapter House Street, York YO1 7JH, UK</string>
    <string name="grays_court_hotel_phone">+44 1904 612613</string>
    <string name="grays_court_hotel_web">https://www.grayscourtyork.com/</string>
    <string name="hilton_york_name">Hilton York</string>
</resources>