<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_backdrop_height"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/backdrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/backdrop"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="24dp">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_margin">

                <LinearLayout
                    style="@style/Widget.CardContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/description"
                        style="@style/detailTextNormal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/description" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/card_margin"
                android:layout_marginEnd="@dimen/card_margin"
                android:layout_marginStart="@dimen/card_margin">

                <android.support.constraint.ConstraintLayout
                    style="@style/Widget.CardContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/address_icon"
                        android:layout_width="@dimen/icon_size"
                        android:layout_height="@dimen/icon_size"
                        android:contentDescription="@string/address"
                        android:padding="@dimen/details_image_padding"
                        android:src="@drawable/ic_location_on"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/address_text"
                        style="@style/detailTextInfo"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/icon_size"
                        android:text="@string/address"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/address_icon"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/web_icon"
                        android:layout_width="@dimen/icon_size"
                        android:layout_height="@dimen/icon_size"
                        android:contentDescription="@string/web"
                        android:padding="@dimen/details_image_padding"
                        android:src="@drawable/ic_public"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/address_icon" />

                    <TextView
                        android:id="@+id/web_text"
                        style="@style/detailTextInfo"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/icon_size"
                        android:text="@string/web"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/web_icon"
                        app:layout_constraintTop_toBottomOf="@id/address_text" />

                    <ImageView
                        android:id="@+id/phone_icon"
                        android:layout_width="@dimen/icon_size"
                        android:layout_height="@dimen/icon_size"
                        android:contentDescription="@string/phone"
                        android:padding="@dimen/details_image_padding"
                        android:src="@drawable/ic_call"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/web_icon" />

                    <TextView
                        android:id="@+id/phone_text"
                        style="@style/detailTextInfo"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/icon_size"
                        android:text="@string/phone"
                        android:textIsSelectable="false"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/phone_icon"
                        app:layout_constraintTop_toBottomOf="@id/web_text" />

                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/hours_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/card_margin"
                android:layout_marginEnd="@dimen/card_margin"
                android:layout_marginStart="@dimen/card_margin">


                <android.support.constraint.ConstraintLayout
                    style="@style/Widget.CardContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/hours"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/details_text_padding"
                        android:text="@string/hours"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title"
                        android:textSize="@dimen/details_text_size"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/mondays"
                        style="@style/detailTextNormal"
                        android:layout_width="@dimen/days_width"
                        android:layout_height="wrap_content"
                        android:text="@string/monday"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/hours" />

                    <TextView
                        android:id="@+id/monday"
                        style="@style/detailTextNormal"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/time_interval"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/mondays"
                        app:layout_constraintTop_toBottomOf="@id/hours" />

                    <TextView
                        android:id="@+id/tuesdays"
                        style="@style/detailTextNormal"
                        android:layout_width="@dimen/days_width"
                        android:layout_height="wrap_content"
                        android:text="@string/tuesday"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/mondays" />

                    <TextView
                        android:id="@+id/tuesday"
                        style="@style/detailTextNormal"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/time_interval"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/tuesdays"
                        app:layout_constraintTop_toBottomOf="@id/monday" />

                    <TextView
                        android:id="@+id/wednesdays"
                        style="@style/detailTextNormal"
                        android:layout_width="@dimen/days_width"
                        android:layout_height="wrap_content"
                        android:text="@string/wednesday"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tuesdays" />

                    <TextView
                        android:id="@+id/wednesday"
                        style="@style/detailTextNormal"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/time_interval"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/wednesdays"
                        app:layout_constraintTop_toBottomOf="@id/tuesday" />

                    <TextView
                        android:id="@+id/thursdays"
                        style="@style/detailTextNormal"
                        android:layout_width="@dimen/days_width"
                        android:layout_height="wrap_content"
                        android:text="@string/thursday"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/wednesdays" />

                    <TextView
                        android:id="@+id/thursday"
                        style="@style/detailTextNormal"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/time_interval"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/thursdays"
                        app:layout_constraintTop_toBottomOf="@id/wednesday" />

                    <TextView
                        android:id="@+id/fridays"
                        style="@style/detailTextNormal"
                        android:layout_width="@dimen/days_width"
                        android:layout_height="wrap_content"
                        android:text="@string/friday"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/thursdays" />

                    <TextView
                        android:id="@+id/friday"
                        style="@style/detailTextNormal"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/time_interval"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/fridays"
                        app:layout_constraintTop_toBottomOf="@id/thursday" />

                    <TextView
                        android:id="@+id/saturdays"
                        style="@style/detailTextNormal"
                        android:layout_width="@dimen/days_width"
                        android:layout_height="wrap_content"
                        android:text="@string/saturday"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/fridays" />

                    <TextView
                        android:id="@+id/saturday"
                        style="@style/detailTextNormal"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/time_interval"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/saturdays"
                        app:layout_constraintTop_toBottomOf="@id/friday" />

                    <TextView
                        android:id="@+id/sundays"
                        style="@style/detailTextNormal"
                        android:layout_width="@dimen/days_width"
                        android:layout_height="wrap_content"
                        android:text="@string/sunday"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/saturdays" />

                    <TextView
                        android:id="@+id/sunday"
                        style="@style/detailTextNormal"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/time_interval"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/sundays"
                        app:layout_constraintTop_toBottomOf="@id/saturday" />

                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/map_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/card_margin"
                android:layout_marginEnd="@dimen/card_margin"
                android:layout_marginStart="@dimen/card_margin">

                <LinearLayout
                    style="@style/Widget.CardContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <fragment
                        android:id="@+id/map"
                        android:name="com.google.android.gms.maps.SupportMapFragment"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/map_fragment_height" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>